# pg_fela

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.rs  deny.toml  pg_fela.control
.github/workflows/: ci.yml  release.yml
docker/initdb/: 00-create-extension.sql
docs/: INSTALL.md  SQL_REFERENCE.md
examples/: automl_in_a_select.sql  automl_showcase.sql
packaging/: build-deb.sh  build-rpm.sh  pg_fela.spec
src/: felatab.rs  lib.rs  ops.rs  qgemm.rs  safetensors_io.rs
test/: run_pgrx_test.sh
tests/fixtures/felatab/: felatab_config.json  golden.json
