[package]
name = "pg_fela"
version = "1.0.0"
edition = "2021"
license = "PostgreSQL"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("parallel"))'] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg18"]
pg13 = ["pgrx/pg13"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]
pg_test = []

[dependencies]
pgrx = "0.19.1"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_gbm = "0.1"

[dev-dependencies]
pgrx-tests = "0.19.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
